feat:jym-catalog-service-api/Category feats added
