# jym-catalog-service/src/main/java/jymusic/jym_catalog_service/dto/request/CategoryUpdateRequest.java
@@ -1,0 +1,15 @@
+package jymusic.jym_catalog_service.dto.request;
+
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Size;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+
+@Getter
+@NoArgsConstructor
+public class CategoryUpdateRequest {
+
+    @NotBlank(message = "카테고리 이름은 필수입니다.")
+    @Size(max = 50, message = "카테고리 이름은 50자 이하여야 합니다.")
+    private String name;
+}
